--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
 		"class-transformer": "^0.2.3",
 		"class-validator": "^0.10.2",
 		"nodemon": "^1.19.4",
+		"reflect-metadata": "^0.1.13",
 		"ts-node": "^8.4.1",
 		"tslint": "^5.20.0",
 		"typescript": "^3.6.4"
