视频信息的增删改查

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -10,6 +10,8 @@
 		"strictNullChecks": true,
 		"removeComments": true,
 		"noEmitOnError": true,
+		//转化commonjs规范的导出方式
+		"esModuleInterop": true,
 		"lib": ["esnext"]
 	},
 	"include": ["./src"]
