--- a/server/package.json
+++ b/server/package.json
@@ -8,10 +8,12 @@
 		"dev": "nodemon --watch src -e ts --exec ts-node src/index.ts"
 	},
 	"dependencies": {
+		"@types/express": "^4.17.1",
 		"@types/mongoose": "^5.5.28",
 		"@types/node": "^12.12.0",
 		"class-transformer": "^0.2.3",
 		"class-validator": "^0.10.2",
+		"express": "^4.17.1",
 		"mongoose": "^5.7.7",
 		"nodemon": "^1.19.4",
 		"reflect-metadata": "^0.1.13",
