--- a/server/package.json
+++ b/server/package.json
@@ -10,11 +10,13 @@
 	"dependencies": {
 		"@types/express": "^4.17.1",
 		"@types/mongoose": "^5.5.28",
+		"@types/multer": "^1.3.10",
 		"@types/node": "^12.12.0",
 		"class-transformer": "^0.2.3",
 		"class-validator": "^0.10.2",
 		"express": "^4.17.1",
 		"mongoose": "^5.7.7",
+		"multer": "^1.4.2",
 		"nodemon": "^1.19.4",
 		"reflect-metadata": "^0.1.13",
 		"ts-node": "^8.4.1",
