--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-scripts": "3.2.0",
+    "redux": "^4.0.4",
     "typescript": "3.6.4"
   },
   "scripts": {
@@ -33,6 +34,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-	},
-	"proxy": "http://localhost"
+  },
+  "proxy": "http://localhost"
 }
